k8s/predictora-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: predictoraai-db
  namespace: default
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: predictoraai-db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predictoraai-db
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: predictoraai-db
  template:
    metadata:
      labels:
        app: predictoraai-db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pgdata
        emptyDir: {}
