k8s/predictora-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predictoraai-db
  namespace: predictora
spec:
  replicas: 1
  selector:
    matchLabels:
      app: predictoraai-db
  template:
    metadata:
      labels:
        app: predictoraai-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: predictoraai-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: predictoraai-db
  namespace: predictora
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: predictoraai-db
